Added  page images

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>BIG BRAINS Audio | Audio Engineering Marketplace</title>
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="./css/styles.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -66,7 +66,7 @@
           </div>
           <div class="hero-stats">
             <div class="stat">
-              <span class="stat-number">500+</span>
+              <span class="stat-number">15+</span>
               <span class="stat-label">Engineers</span>
             </div>
             <div class="stat">
@@ -81,7 +81,7 @@
         </div>
         <div class="hero-image">
           <img
-            src="./assests/images/1920_Karriere.webp"
+            src="./assests/images/audio-engineering-studio.png"
             alt="Audio Engineering Studio"
           />
           <div class="waveform-overlay"></div>
@@ -654,7 +654,7 @@
           </div>
         </div>
         <div class="cta-image">
-          <img src="cta-image.png" alt="Studio Equipment" />
+          <img src="/assests/images/cta-image.png" alt="Studio Equipment" />
         </div>
       </div>
     </section>
@@ -787,6 +787,6 @@
       </div>
     </footer>
 
-    <script src="script.js"></script>
+    <script src="./js/script.js"></script>
   </body>
 </html>
